@@ -6,7 +6,8 @@ export(labkey.selectRows, labkey.executeSql, makeFilter, labkey.insertRows, labk
 	labkey.domain.drop, labkey.domain.get, labkey.domain.create, labkey.domain.createDesign, labkey.domain.save, labkey.domain.createAndLoad,
 	labkey.rstudio.initSession, labkey.rstudio.initRStudio, labkey.rstudio.initReport, labkey.rstudio.saveReport, labkey.rstudio.isInitialized,
 	labkey.transform.readRunPropertiesFile, labkey.transform.getRunPropertyValue, labkey.setDebugMode,
-	labkey.webdav.get, labkey.webdav.put, labkey.webdav.delete, labkey.webdav.mkDir, labkey.webdav.mkDirs, labkey.webdav.pathExists, labkey.webdav.listDir, labkey.webdav.downloadFolder)
+	labkey.webdav.get, labkey.webdav.put, labkey.webdav.delete, labkey.webdav.mkDir, labkey.webdav.mkDirs, labkey.webdav.pathExists, labkey.webdav.listDir, labkey.webdav.downloadFolder,
+	labkey.truncateTable)
 export("getSchema")
 export("getFolderPath")
 export("saveResults")
